--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+jwt.secret=dsf230sdfasdljf21
+jwt.expiration=86400000
